# colk-uv-distroless-python

./: .dockerignore  Dockerfile  README.md  compose.example.yml  pyproject.toml
docker/python/: Dockerfile
