[project]
name = "example-app"
version = "0.1.0"
description = "Example Python application using colk-uv-distroless-python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
